0.6.0 - Removed unneeded Logback integration config